[package]
name = "kcnmonitoring"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "*", features = ["full"] }
tokio-cron-scheduler = "*"
chrono = { version = "*", features = ["clock"] }
env_logger = "*"
log = "*"
serde = { version =  "*", features = ["derive"] }
serde_json = "*"
ureq = "*"
dotenv = "*"
reqwest = "*"
sqlx = { version = "*", features = ["postgres", "runtime-tokio", "chrono"] }