[package]
name = "kcnmonitoring"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52", features = ["rt-multi-thread", "macros"] }
tokio-cron-scheduler = "0.15"
chrono = { version = "0.4", features = ["clock", "serde"] }
env_logger = "0.11"
log = "0.4"
serde = { version =  "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.13.4", features = ["rustls"]}
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "chrono", "tls-rustls"] }
sha2 = "0.11.0"
hmac = "0.13.0"
base64 = "0.22"
urlencoding = "2.1.3"
dotenvy = "0.15.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
incremental = false

[profile.dev]
opt-level = 0