[package]
name = "kcnmonitoring"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.53", default-features = false, features = ["rt-multi-thread", "macros"] }
tokio-cron-scheduler = { version = "0.15", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version =  "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
reqwest = {version = "0.13", default-features = false, features = ["rustls"]}
sqlx = { version = "0.9", default-features = false, features = ["postgres", "runtime-tokio", "chrono", "tls-rustls"] }
sha2 = { version = "0.11", default-features = false }
hmac = { version = "0.13", default-features = false }
base64 = { version = "0.22", default-features = false }
urlencoding = { version = "2.1", default-features = false }
dotenvy = { version = "0.15", default-features = false}
anyhow = { version = "1.0", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "json"] }
tracing-appender = { version = "0.2", default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
incremental = false

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true

[profile.test]
inherits = "dev"
opt-level = 1
